<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Worldly</string>
    <string name="action_settings">Settings</string>
    
    <string name="strFamily">Moving with family</string>
    <string name="strNewLife">Starting a new life</string>
    <string name="strBusiness">Expanding business</string>
    <string name="strCustom">Customise your Own</string>
    <string name="action_settings">Settings</string>

	<!-- ActivityName -->
    <string name="strCustom">Custom Search</string>
    
    <string name="search_hint">Search by Country or ISO</string> 
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    
    <string name="countries_spinner_prompt">Selected Countries</string>
    <string name="clear_string">Clear Selection</string>
    <string name="compare_string">Go Compare</string>
    
    <string name="title_activity_categories">Compare Countries</string>
    <string name="title_activity_map">Select Countries</string>
    <string name="title_activity_selection">Welcome to Worldly</string>
    
    <!-- SelectionActivity -->
    <string name="strFamily">Moving with your family</string>
    <string name="strNewLife">Starting a new life</string>
    <string name="strBusiness">Expanding your business</string>
    <string name="strCustom">Custom Search</string>
    
    <!-- MapActivity -->
    <string name="empty_list_countries">Please add at least one country.</string>
    <string name="search_hint">Search by Country or ISO</string>
    <string name="compare_string">Go Compare</string>
    <string name="countries_spinner_prompt">Selected Countries</string>
    <string name="clear_string">Clear Selection</string>
    <string name="tap_to_add_or_remove">Tap to Add / Remove</string>

	<string name="action_about">About</string>
    <string name="title_activity_about">About Worldly</string>
    <string name="hello_world">Hello world!</string>
    <string name="usafdesc">USAF Logo</string>
    
    <string name="category">Category</string>
    
    <string-array name="subCategoriesBusiness">
        <item name="gdp">GDP</item>
        <item name="investment">Investment</item>
        <item name="import_export">Import / Export</item>
        <item name="labor_force">Labor Force</item>
        <item name="tax">Tax</item>
    </string-array>

    <string-array name="subCategoriesCityLife">
        <item name="population">Population</item>
        <item name="age_distribution">Age Distribution</item>
        <item name="life_expectancy">Life Expectancy</item>
    </string-array>
    
    <string-array name="subCategoriesClimate">
        <item name="co2_emissions">CO2 Emissions</item>
        <item name="methane_emissions">Methan Emissions</item>
        <item name="other_emissions">Other Emissions</item>
    </string-array>
    
    <string-array name="subCategoriesDemographics">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesEducation">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesEmploymentProspects">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesFinance">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesQualityOfLife">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesRuralLife">
        <item name=""></item>
    </string-array>
    
    <string-array name="subCategoriesMilitary">
        <item name="military_expenditure">Military Expenditure</item>
    </string-array>    
</resources>
