<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MapActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/country_search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- <Spinner
            android:id="@+id/countries_selected_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:prompt="@string/countries_spinner_prompt" /> -->
        
        <Button
            android:id="@+id/countries_selected_button"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/countries_spinner_prompt" />
        
        <Button 
            android:id="@+id/clear_country_selection_button"
            style="@style/AppTheme"
            android:layout_width="wrap_content" 
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear_string" />
        
        <Button
            android:id="@+id/compare_button"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/compare_string" />

    </LinearLayout>
        
	<fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>